--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+    "scripts": {
+      "start": "node server.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
